# swin-transformer

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt  run
images/: illustrations.excalidraw
model/: __init__.py  swin_shared.py  swin_transformer_2d.py  swin_transformer_2d_test.py  swin_transformer_3d.py  swin_transformer_3d_test.py
model/modules/: __init__.py
model/modules/patch_embedding/: __init__.py  patch_embedding_2d.py  patch_embedding_3d.py
model/modules/patch_merging/: __init__.py  patch_merging_2d.py  patch_merging_3d.py
model/modules/swin_transformer_block/: __init__.py  swin_transformer_block_2d.py  swin_transformer_block_3d.py  swin_transformer_block_base.py
model/modules/window_attention/: __init__.py  window_attention_2d.py  window_attention_3d.py  window_attention_base.py
model/transformer/: __init__.py  transformer_2d.py  transformer_3d.py
notebooks/: cifar10.ipynb  requirements.txt  visualisation.ipynb
notebooks/cifar10/: reference.py
notebooks/cifar10/logs/custom/version_0/: hparams.yaml  metrics.csv
notebooks/cifar10/logs/custom/version_1/: metrics.csv
notebooks/cifar10/logs/reference/version_0/: metrics.csv
notebooks/utils/: configs.py  reference.py
scripts/: format  setup
tests/: test_patch_embedding.py  test_patch_merging.py  test_swin_transformer.py  test_swin_transformer_block.py  test_window_attention.py
transformer/: __init__.py  patch_embedding.py  patch_embedding_test.py  patch_merging.py  patch_merging_test.py  window_attention.py  window_attention_test.py
(+2 files in other folders)
