[project]
name = "master-project"
dynamic = ["version"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -v -s"
testpaths = [
    "model",
]
pythonpath = "."

[tool.ruff]
exclude = [
    ".direnv",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "__pypackages__",
]
line-length = 120
target-version = "py311"

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint]
select = ["E", "F"]
ignore = []
mccabe.max-complexity = 10
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"